--- a/Kuz'.mw
+++ b/Kuz'.mw
@@ -72,7 +72,7 @@ Kaik 35 erikod da 2 gibridad mülüdas neche heimho [[Germplasm Resources Inform
 * ''Picea hurstii'' [[De Hurst]]
 * ''Picea mariorika'' [[Boom]]
 
-== Kuzhe sidotud vepsän muštatišed da ozoitesed ==
+== Kuzhe sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
 * ''Kezal kaikutte kuzhaine pästab öks.''
@@ -82,7 +82,7 @@ Kaik 35 erikod da 2 gibridad mülüdas neche heimho [[Germplasm Resources Inform
 
 === Ozoitez ===
 <blockquote>
-Mecas koume mechašt, kezal i tal'vel ühted sädod (hong, kuz' da kadag).
+* Mecas koume mechašt, kezal i tal'vel ühted sädod. (hong, kuz' da kadag)
 </blockquote>
 
 == Homaičendad ==
