/* Kadaghe sidotud vepsän ozoitez */

--- a/Kadag.mw
+++ b/Kadag.mw
@@ -32,9 +32,9 @@ Kadagen üks' gektar eritab 30 kilogrammad [[fitoncidad|fitoncidid]] päiveses, 
 
 Marjanvuiččed käbud oleskeldas küpsikš kahtendel vodel. Puzertas niid i tehtas [[sirop]]ad, kätas jauhoks i ližatas sömhä eriližmaguteseks. Keittas i kävutadas vet südäimuniden i kuziburakon läžundoid vaste. Sadas void kahten amerikalaižen erikon puspäi da kavagespäi. Ottas kävutamižhe [[pumaterial|pud]] tehmaha pirdimid i batogoid.
 
-== Kadaghe sidotud vepsän ozoitez ==
+== Kadaghe sidodud vepsän ozoitez ==
 <blockquote>
-Mecas koume mechašt, kezal i tal'vel ühted sädod (''hong, kuz' da kadag'').
+* Mecas koume mechašt, kezal i tal'vel ühted sädod. (hong, kuz' da kadag)
 </blockquote>
 
 == Homaičendad ==
