*Empty MediaWiki Message*

--- a/Lumi.mw
+++ b/Lumi.mw
@@ -26,9 +26,9 @@ Pandas laudoid pöudoiden veril rividen nägul tal'vaigaks, miše kaita sadegid 
 * ''Uz' lumi tuli tošt otmaha.''
 </blockquote>
 
-=== Ozoitesed ===
+=== Ozoitez ===
 <blockquote>
-Must, kut nogi, vauged, kut lumi, hüppib, kut bes, pajatab, kut pap' (harag).
+* Must, kut nogi, vauged, kut lumi, hüppib, kut bes, pajatab, kut pap'. (harag)
 </blockquote>
 
 == Homaičendad ==
