--- a/Harag.mw
+++ b/Harag.mw
@@ -40,7 +40,7 @@ Ižačun i emäčun irdpol'ne nägu om ühtejitte, no ižačun keskmäine veduz 
 == Äikerdoičend ==
 Elädas paroil. Valitas partnörad elon ezmäižel vodel, kandustaškatas kahtendel vodel, pezoiteldas koumandel vodel. Tehtas severz'-se šurunvuiččid pezoid kuiviš raguzišpäi, lapttulendanke, no munind om vaiše ühtes pezas. Emäč munib 5..8 munad sulakus, sen jäl'ghe haudub niid 17..18 päivest.
 
-== Haragha sidotud vepsän muštatišed da ozoitesed ==
+== Haragha sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
 * ''Oza om ku haragan peza.'' (ei ole kaikenaigaine)
@@ -50,10 +50,10 @@ Elädas paroil. Valitas partnörad elon ezmäižel vodel, kandustaškatas kahten
 
 === Ozoitez ===
 <blockquote>
-Must, kut nogi, vauged, kut lumi, hüppib, kut bes, pajatab, kut pap' (harag).
+* Must, kut nogi, vauged, kut lumi, hüppib, kut bes, pajatab, kut pap'. (harag)
 </blockquote>
 
-== Haragha sidotud vepsän tärtused ==
+== Haragha sidodud vepsän tärtused ==
 * ''Haraganpašoi'' — navedii hohotada naine.
 * ''Haragansu'' — avoinsu.
 
