--- a/Eländkodi.mw
+++ b/Eländkodi.mw
@@ -180,17 +180,18 @@ Vogelhaus Modell Eduard 4.JPG|Lindpertiine todesižen küläkodin kartte
 </gallery>
 
 == Eländkodihe sidodud vepsän muštatišed da ozoitesed ==
-;Muštatišed
+=== Muštatišed ===
 <blockquote>
 * ''Pert' tehmata ei tule.''
 * ''Toižes kodiš i vet toižin kandištas.''
 </blockquote>
 
-;Ozoitesed
+=== Ozoitesed ===
 <blockquote>
 * Irdalpäi kromaine, pertišpäi bibloine. (parz' seinäs)
 * Kaikil persked kacub. (künduz)
 * Mecha mäneb, kodihe kacub, kodihe tuleb, mecha kacub. (kašal' sel'gas)
+* Ühthe rožaha, toine toižhe, sil'metusin kactas. (lagi da lava)
 </blockquote>
 
 == Kacu mugažo ==
