--- a/Sild.mw
+++ b/Sild.mw
@@ -7,15 +7,20 @@ Sauvuz oleleb jaugnikoiden, živatoiden, torvveimiden, veden i transportan täht
 
 Letud tes päliči inženerine sauvuz om [[tenveim]] (pit'k — [[estakad]]), sauvuz vanas (laksos) vai uras päliči nimitase [[viaduk]]aks. Tehtas sildoid neniš materialoišpäi: metall (teraz, alüminijan ühthesuladused), raudbeton, beton, londuseline kivi, pumaterialad, norad. Specializiruidud organizacijad-sildanjoukud saudas da kohetas sildoid. Pordaigaline sild kogoneb pulloišpäi. Sildan vajehtuz om [[ehtatim]].
 
+== Sildha sidodud vepsän ozoitez ==
+<blockquote>
+* Seižub pap' sildal i kidastab: «Kaikid kuzen!». (samvar)
+</blockquote>
+
 == Galerei ==
-<center><gallery>
-Fail:Iron Bridge.JPG|Ezmäine mail'mas metalline (kaugedraudaine) sild [[Severn]]as päliči<br />(radoi 1781−1935, Sur' Britanii)
-Fail:Sankt Petersburg Dworzowy-Bridge 2005 b.jpg|Kändab [[Pert'kulun sild]], Piter (Venälaine Federacii, vspäi 1916)
-Fail:"Russian bridge" in Vladivostok city.jpg|Venälaine sild om kahtenz' kortte mail'mas piloniden mödhe (324 m, [[Vladivostok]], Venälaine Federacii, vspäi 2012)
-Fail:201603 Danyang-Kunshan grand bridge (wuxi).JPG|Dan'jan-Kun'šanine viaduk om kaikiš pidemb sild mail'mas (164 km), ühtenzoitab [[Šanhai]]d [[Nankin]]anke, om saudud vll 2008−2010 kiruhraudtelikundan täht, radab vspäi 2011
-Fail:RhB Ge 4-4 II Wiesener Viadukt.jpg|Vizenan raudteviaduk, [[Šveicarii]], om saudud vll 1906−1909
-Fail:Carretera sobre el agua, entre bahías de Tokyo - panoramio.jpg|Äižiruižed estakadad, [[Tokio]]
-</gallery></center>
+<gallery mode="packed" heights="125px">
+Iron Bridge.JPG|Ezmäine mail'mas metalline (kaugedraudaine) sild [[Severn]]as päliči<br />(radoi 1781−1935, Sur' Britanii)
+Sankt Petersburg Dworzowy-Bridge 2005 b.jpg|Kändab [[Pert'kulun sild]], Piter (Venälaine Federacii, vspäi 1916)
+"Russian bridge" in Vladivostok city.jpg|Venälaine sild om kahtenz' kortte mail'mas piloniden mödhe (324 m, [[Vladivostok]], Venälaine Federacii, vspäi 2012)
+201603 Danyang-Kunshan grand bridge (wuxi).JPG|Dan'jan-Kun'šanine viaduk om kaikiš pidemb sild mail'mas (164 km), ühtenzoitab [[Šanhai]]d [[Nankin]]anke, om saudud vll 2008−2010 kiruhraudtelikundan täht, radab vspäi 2011
+RhB Ge 4-4 II Wiesener Viadukt.jpg|Vizenan raudteviaduk, [[Šveicarii]], om saudud vll 1906−1909
+Carretera sobre el agua, entre bahías de Tokyo - panoramio.jpg|Äižiruižed estakadad, [[Tokio]]
+</gallery>
 
 == Homaičendad ==
 <references />
