--- a/.bb.mw
+++ b/.bb.mw
@@ -1,5 +1,9 @@
 '''.bb''' om [[Barbados]]an [[DNS|Internet-domen]]. Se om avaitud [[1991. voz'|1991]]-nden voden 3. päiväl sügüz'kud.<ref>[http://iana.org/domains/root/db/bb.html IANA — .bb Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
+Registracii om lasktud kahtendel tazopindal, mugažo koumandel tazopindal kahtenden tazopindan domenoiden rives. Sab registriruida domennimed Barbadosan eläjile i sen kompanijoile vaiše.
+
+Jogavozne maksmine miččen taht saitan tehnižes pid'oitelendas om BBD$120.
+
 == Homaičendad ==
 <references />
 
