--- a/.bb.mw
+++ b/.bb.mw
@@ -4,6 +4,12 @@ Registracii om lasktud kahtendel tazopindal, mugažo koumandel tazopindal kahten
 
 Jogavozne maksmine miččen taht saitan tehnižes pid'oitelendas om BBD$120.
 
+Kahtenden tazopindan erased reglamentiruidud domenad:
+* '''gov.bb''' — valdkundaližed organad
+* '''.org.bb''' — kommertižetomad organizacijad
+* '''.edu.bb''' — tedoližtedoidusiden aluzkundad, kolledžad i universitetad
+* '''.com.bb''' — kommertižed edheotandad, korporacijad
+
 == Homaičendad ==
 <references />
 
