--- a/Barbadosan_dollar.mw
+++ b/Barbadosan_dollar.mw
@@ -1,3 +1,4 @@
+[[Fail:Barbadian Money.jpg|thumb|right|250px|Barbadosan personaližed rahad: banknot i hobedrahud 1 dollar nominalanke, rahuded 5, 10 i 25 centad]]
 '''Barbadosan dollar''' ({{lang-en|Barbadian dollar}}) om [[Barbados]]an valdkundvalüt. Vajehti [[päivnouzmkariban dollar]]ad valdkundan territorijal vn 1973 tal'vkus.
 
 1 dollar = 100 centad. Valütkod om ''BBD''. Simvol: Bds$. Valütan regulätor om Barbadosan Keskuzbank<ref>[http://centralbank.org.bb/ Barbadosan Keskuzbankan sait (''centralbank.org.bb'').]
