--- a/Barbadosan_dollar.mw
+++ b/Barbadosan_dollar.mw
@@ -2,9 +2,9 @@
 '''Barbadosan dollar''' ({{lang-en|Barbadian dollar}}) om [[Barbados]]an valdkundvalüt. Vajehti [[päivnouzmkariban dollar]]ad valdkundan territorijal vn 1973 tal'vkus.
 
 1 dollar = 100 centad. Valütkod om ''BBD''. Simvol: Bds$. Valütan regulätor om Barbadosan Keskuzbank<ref>[http://centralbank.org.bb/ Barbadosan Keskuzbankan sait (''centralbank.org.bb'').]
-{{ref-en}} </ref>. Valütkurs om [[AÜV:oiden dollar]]ha sidodud: 1 US$ = 2 BBD$.
+{{ref-en}} </ref>. Valütkurs om [[AÜV:oiden dollar]]ha sidodud kovas: 1 US$ = 2 BBD$.
 
-Rahad pörundas: rahuded 1, 5, 10, 25 centad i 1 dollar, banknotad 2, 5, 10, 20, 50, 100 dollarad nominalanke.
+Rahad pörundas: rahuded 1 cent (ei ole uzid pästandoid, vn 2014 semendkuspäi arvoiden hašk om 5 centad), 5, 10, 25 centad i 1 dollar, banknotad 2, 5, 10, 20, 50, 100 dollarad nominalanke.
 
 == Homaičendad ==
 <references />
