--- a/.ar.mw
+++ b/.ar.mw
@@ -1,4 +1,6 @@
-'''.ar''' om [[Argentin]]an [[DNS|Internet-domen]]. Se om avaitud [[1987. voz'|1987]]-nden voden 23. päiväl sügüz'kud.<ref>[http://iana.org/domains/root/db/ar.html IANA — .ar Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.ar''' om [[Argentin]]an [[DNS|Internet-domen]]. Se om avaitud [[1987. voz'|1987]]-nden voden 23. päiväl sügüz'kud<ref>[http://iana.org/domains/root/db/ar.html IANA — .ar Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vn 2017 kezakus domennimiden lugu oli enamba mi pol'millionad.
+
+Domennimen registracii om lasktud koumandel tazopindal kahtenden tazopindan domenal, jogal voib olda ičeze röunadusid. Realine kontaktine adres Argentinas om tarbhaine, hot' personale sab olda verazmalaižen. 
 
 == Homaičendad ==
 <references />
