--- a/.ar.mw
+++ b/.ar.mw
@@ -1,6 +1,6 @@
 '''.ar''' om [[Argentin]]an [[DNS|Internet-domen]]. Se om avaitud [[1987. voz'|1987]]-nden voden 23. päiväl sügüz'kud<ref>[http://iana.org/domains/root/db/ar.html IANA — .ar Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vn 2017 kezakus domennimiden lugu oli enamba mi pol'millionad.
 
-Domennimen registracii om lasktud koumandel tazopindal kahtenden tazopindan domenal, jogal voib olda ičeze röunadusid. Realine kontaktine adres Argentinas om tarbhaine, hot' personale sab olda verazmalaižen. 
+Domennimen registracii om lasktud koumandel tazopindal kahtenden tazopindan domenal, jogal voib olda ičeze röunadusid. Realine kontaktine adres Argentinas om tarbhaine, hot' personale sab olda verazmalaižen. Vn 2008 kül'mkuspäi domennimi voib mülütada nenid kirjamid: ñ, á, é, í, ó, ú, ä, ë, ï, ö, ü.
 
 == Homaičendad ==
 <references />
@@ -8,6 +8,7 @@ Domennimen registracii om lasktud koumandel tazopindal kahtenden tazopindan dome
 == Irdkosketused ==
 * [http://www.nic.ar/ Domenan sait — NIC Argentina (''nic.ar'', ''Dirección Nacional del Registro de Dominios de Internet'').] {{ref-es}}; {{ref-en}} (registracijanke)
 * [http://iana.org/domains/root/db/ar.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.ar}}
 
 {{CcTLD}}
 
