--- a/.ar.mw
+++ b/.ar.mw
@@ -1,6 +1,17 @@
 '''.ar''' om [[Argentin]]an [[DNS|Internet-domen]]. Se om avaitud [[1987. voz'|1987]]-nden voden 23. päiväl sügüz'kud<ref>[http://iana.org/domains/root/db/ar.html IANA — .ar Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vn 2017 kezakus domennimiden lugu oli enamba mi pol'millionad.
 
-Domennimen registracii om lasktud koumandel tazopindal kahtenden tazopindan domenal, jogal voib olda ičeze röunadusid. Realine kontaktine adres Argentinas om tarbhaine, hot' personale sab olda verazmalaižen. Vn 2008 kül'mkuspäi domennimi voib mülütada nenid kirjamid: ñ, á, é, í, ó, ú, ä, ë, ï, ö, ü.
+Domennimen registracii om lasktud koumandel tazopindal kahtenden tazopindan domenal, kaikuččel voib olda ičeze röunadusid. Realine kontaktine adres Argentinas om tarbhaine, hot' personale sab olda verazmalaižen. Vn 2008 kül'mkuspäi domennimi voib mülütada nenid kirjamid: ñ, á, é, í, ó, ú, ä, ë, ï, ö, ü.
+
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''.com.ar''' — mitte taht kävutand
+* '''.coop.ar''' — kooperativad 
+* '''.edu.ar''' — opendusen aluzkundad
+* '''.gob.ar''' (omonim '''.gov.ar''') — valdkundaližed organad
+* '''.int.ar''' — rahvahidenkeskeižed organizacijad
+* '''.mil.ar''' — sodaaluzkundad
+* '''.net.ar''' — Internet-verkon sijaližed provaiderad
+* '''.org.ar''' — kommertižetomad organizacijad
+* '''.tur.ar''' — turizman oficialižed agentused
 
 == Homaičendad ==
 <references />
