--- a/.ar.mw
+++ b/.ar.mw
@@ -11,7 +11,9 @@ Kahtenden tazopindan reglamentiruidud domenad:
 * '''.mil.ar''' — sodaaluzkundad
 * '''.net.ar''' — Internet-verkon sijaližed provaiderad
 * '''.org.ar''' — kommertižetomad organizacijad
-* '''.tur.ar''' — turizman oficialižed agentused
+* '''.tur.ar''' — turizman oficialižed agentused, regionoiden i municipalitetoiden turizman saitad
+* '''.musica.ar''' — Argentinan muzikantad i muzikkollektivad
+* '''.bet.ar''' — licenziruidud ohjastusel onlainvändoiden operatorad.
 
 == Homaičendad ==
 <references />
