--- a/Titanik_(fil'm,_1997).mw
+++ b/Titanik_(fil'm,_1997).mw
@@ -4,7 +4,7 @@
  | Voz'         = 1997.
  | Valdkund     = {{USA}}
  | Kel'         = [[anglijan kel'|anglijan]]
- | Žanr         = torafil'm
+ | Žanr         = fil'm-katastrof<br/>romantine dram
  | Režissör     = [[Kemeron Džeims|Džeims Kemeron]]
  | Scenarii     = Džeims Kemeron
  | Muzikankirjutai = [[Džeims Horner]]
@@ -17,8 +17,8 @@
  | Montaž       = 
  | Operator     = Rasselo Karpenter
  | Arvlahjad    = 
- | Büdžet       = 
- | Salhed       = 
+ | Büdžet       = 200 mln US$
+ | Salhed       = 2,2 mlrd US$
  | Salhed Venämas =  
  | Edeline fil'm    = 
  | Jäl'ghine fil'm  = 
@@ -27,18 +27,19 @@
  | imdb_id      = 0120338
  | kp_id        = 
 }}
-'''«Titanik»''' ({{lang-en|Titanic}}) om [[1997]]-nden voden [[AÜV|amerikalaine]] torafil'm.
-
-Režissör — [[Kemeron Džeims|Džeims Kemeron]].
+'''«Titanik»''' ({{lang-en|Titanic}}) om [[Kemeron Džeims|Džeims Kemeron]]-režissöran vn [[1997]] [[AÜV|amerikaine]] fil'm-katastrof i romantine dram.
 
 == Rolid ==
 * ''Džek Douson'' — [[Leonardo Di Kaprio]]
 * ''Rouz Djuitt Bjukeiter'' — [[Keit Uinslett]]
 * ''Kaledon Hokli'' — [[Billi Zein]]
 * ''Brok Lavett'' — [[Bill Pekston]]
+
 == Homaičendad ==
 <references/>
 
 {{stub}}
 [[Kategorii:AÜV:oiden fil'mad]]
 [[Kategorii:Vn 1997 fil'mad]]
+[[Kategorii:Fil'mad-katastrofad]]
+[[Kategorii:Dramfil'mad]]
