--- a/.cz.mw
+++ b/.cz.mw
@@ -1,6 +1,19 @@
 '''.cz''' om [[Čehanma]]n [[DNS|Internet-domen]]. Se om avaitud [[1993. voz'|1993]]-nden voden 13. päiväl vilukud<ref>[http://iana.org/domains/root/db/cz.html IANA — .cz Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref> [[Čehoslovakii|Čehoslovakijan]] čihodamižen jäl'ghe, kudamban domen oli [[.cs]].
 
-Vl 2012 domennimiden lugu ületi millionad, vl 2017 se oli 1,28 mln. Čehanma om [[Evropan Ühtištuz|EÜ:n]] ühtnijan, sikš [[.eu]]-domen om populärine mugažo.
+Vl 2012 domennimiden lugu ületi millionad, vn 2019 heinkus se oli 1,32 mln. Čehanma om [[Evropan Ühtištuz|EÜ:n]] ühtnijan, sikš [[.eu]]-domen om populärine mugažo, voib kävutada diakritižid znamoid siš .cz-zonan domennimiden erineden.
+
+Registracii om lasktud kahtendel tazopindal oikti.
+
+Kahtenden tazopindan reglamentiruidud domenad:
+* '''.asn.cz''' — associacijad i kommertižetomad organizacijad
+* '''.co.cz''', '''.com.cz''' — kommertižed kompanijad, korporacijad
+* '''.edu.cz''' — tedon i professionaližen opendusen aluzkundad
+* '''.fam.cz''', '''.in.cz''' — personad
+* '''.gov.cz''' — valdkundaližed organad
+* '''.it.cz''' — rahvahidenkeskeižed organizacijad
+* '''.net.cz''' — provaiderad, verkoihe sidodud kompanijad
+* '''.og.cz''', '''.or.cz''' — kommertižetomad organizacijad
+* '''.pb.cz''' — aluzkundad
 
 == Homaičendad ==
 <references />
