*Empty MediaWiki Message*

--- a/.cz.mw
+++ b/.cz.mw
@@ -13,7 +13,7 @@ Kahtenden tazopindan reglamentiruidud domenad:
 * '''.it.cz''' — rahvahidenkeskeižed organizacijad
 * '''.net.cz''' — provaiderad, verkoihe sidodud kompanijad
 * '''.og.cz''', '''.or.cz''' — kommertižetomad organizacijad
-* '''.pb.cz''' — aluzkundad
+* '''.pb.cz''' — pästandkodid
 
 == Homaičendad ==
 <references />
