--- a/Marginal.mw
+++ b/Marginal.mw
@@ -1,7 +1,8 @@
-[[Fail:Lost children russia about 1942.jpg|thumb|right|250px|Kadotud venälaižed lapsed voinan aigan, 1942]]
-'''Marginal''' om ristit, kudambal ei ole ičeze [[socialine status|sociališt statusad]], vai kudambal se kadoi. Tobjimalaz malginalad oma «röunal» erazvuiččiden socialižiden gruppoiden keskes, i ei mülügoi konkretižhe kundaližhe klassha. Erasišti kävutase «autsaiderad»-termin.
+[[Fail:Lost children russia about 1942.jpg|thumb|right|250px|Okaidud venälaižed lapsed Suren sodan aigan, 1942]]
+'''Marginal''' om ristit, kudambal [[socialine status]] kadoi, vai ei ole sidä. Tobjimalaz marginalad oma «röunal» erazvuiččiden socialižiden gruppoiden keskes, i ei mülügoi konkretižhe kundaližhe klassha. Erasišti «autsaiderad»-termin kävutase.
 
-Lugedas marginaloikš [[radotomuz|radotomiden]] pala, [[koditomad]], [[bomž]]ad, [[niššatad]], [[hizaidajad]], arestantad; a mugažo [[meletomad]], čudižed, [[invalidižuz|invalidad]], [[autizm|autistad]], [[subkul'tur]]oiden riven ezitajad ([[gopnikad]], {{abbr|kül'metud|отморозки|0}}).
+Lugedas marginaloikš nenid ristituid:
+ [[radotomuz|radotomiden]] pala, [[koditomad]], [[bomž]]ad, [[niššatad]], [[hizaidajad]], arestantad; mugažo [[meletomad]], čudižed, [[invalidižuz|invalidad]], [[autizm|autistad]], [[subkul'tur]]oiden riven ezitajad ([[gopnikad]], {{abbr|kül'metud|отморозки|0}}).
 
 == Kacu mugažo ==
 * [[Marginalizacii]]
@@ -9,7 +10,7 @@ Lugedas marginaloikš [[radotomuz|radotomiden]] pala, [[koditomad]], [[bomž]]ad
 * [[Deklassiruidud elementad]]
 * [[Evgenik]]
 * [[Ragul']]
-{{stub}}
 
+{{stub}}
 [[Kategorii:Sociologii]]
 [[Kategorii:Marginaližuz|*]]
