--- a/Marginal.mw
+++ b/Marginal.mw
@@ -1,8 +1,10 @@
 [[Fail:Lost children russia about 1942.jpg|thumb|right|250px|Okaidud venälaižed lapsed Suren sodan aigan, 1942]]
-'''Marginal''' om ristit, kudambal [[socialine status]] kadoi, vai ei ole sidä. Tobjimalaz marginalad oma «röunal» erazvuiččiden socialižiden gruppoiden keskes, i ei mülügoi konkretižhe kundaližhe klassha. Erasišti «autsaiderad»-termin kävutase.
+'''Marginal''' om ristit, kudambal [[socialine status]] kadoi, vai ei ole sidä. Tobjimalaz marginalad oma «röunal» (latinan ''margo''-sanan znamoičend) erazvuiččiden socialižiden gruppoiden keskes, i ei mülügoi konkretižhe kundaližhe klassha. Erasišti «autsaiderad»-termin kävutase.
 
 Lugedas marginaloikš nenid ristituid:
  [[radotomuz|radotomiden]] pala, [[koditomad]], [[bomž]]ad, [[niššatad]], [[hizaidajad]], arestantad; mugažo [[meletomad]], čudižed, [[invalidižuz|invalidad]], [[autizm|autistad]], [[subkul'tur]]oiden riven ezitajad ([[gopnikad]], {{abbr|kül'metud|отморозки|0}}).
+
+Elo erazvuiččiden socialižiden normiden keskes valatoitab ristitun psihikad i telustab hänele adaptiruidas uziš socialižiš arvoimižiš.
 
 == Kacu mugažo ==
 * [[Marginalizacii]]
