--- a/L'jež.mw
+++ b/L'jež.mw
@@ -15,15 +15,19 @@
 }}
 '''L'jež''' ({{lang-fr|Liège}}, {{lang-nl|Luik}}, [[vallonijan kel'|vallonijan kelel]]: ''Lidje'', {{lang-de|Lüttich}}) om lidn [[Bel'gii|Bel'gijan]] päivnouzmas. Se om [[L'ježan agj]]an administrativine keskuz.
 
+Voz'sadoiš lidn oli azegišton konstruktoroiden päsijaks. Järedad jogiport i lendimport ratas L'ježas jüguiden täht päpaloin.
+
 Vl 2015 lidnan eläjiden lugu oli 197 013 ristitud.
 
 == Galerei ==
-<center><gallery>
+<gallery mode="packed" heights="125px">
 Liège - Palais des Princes-Evêques.jpg|Pert'kulu
-Cathédrale Saint-Paul de Liège.jpg|Ph. Pavlan päjumalanpert'
+Cathédrale Saint-Paul de Liège.jpg|Ph. Pauloin päjumalanpert'
 Ulg.jpg|L'ježan universitet
-</gallery></center>
+</gallery>
 
+== Irdkosketused ==
+* [http://liege.be/ Lidnan oficialine sait (''liege.be'').] {{ref-fr}}
 {{Commons|Liège}}
 
 {{stub}}
