--- a/L'jež.mw
+++ b/L'jež.mw
@@ -1,5 +1,5 @@
 {{Eländpunkt
- | Nimi = L'jež<br />Liège <small>(fr.)</small><br />Luik <small>(alam.)</small><br />Lidje <small>(vallon.)</small><br />Lüttich <small>(saks.)</small>
+ | Nimi = L'jež<br />Liège <small>(fr.)</small><br />Luik <small>(alam.)</small><br />Lîdje <small>(vallon.)</small><br />Lüttich <small>(saks.)</small>
  | Lidnanznam = Blason liege.svg
  | Flag = LuikVlag.svg
  | Lidnanznam text = L'ježan lidnanznam
@@ -13,11 +13,13 @@
  | Telefonkod = +32-4
  | Aigvö = tal'vel [[UTC]]+1,<br/>kezal [[UTC]]+2
 }}
-'''L'jež''' ({{lang-fr|Liège}}, {{lang-nl|Luik}}, [[vallonijan kel'|vallonijan kelel]]: ''Lidje'', {{lang-de|Lüttich}}) om lidn [[Bel'gii|Bel'gijan]] päivnouzmas. Se om [[L'ježan agj]]an administrativine keskuz.
+'''L'jež''' ({{lang-fr|Liège}} [ljɛːʒ], {{lang-nl|Luik}} [lœyk], [[vallonijan kel'|vallonijan kelel]]: ''Lîdje'' [liːtʃ], {{lang-de|Lüttich}} [ˈlʏtɪç], {{lang-la|Leodium / Leodicum}}) om lidn [[Bel'gii|Bel'gijan]] päivnouzmas. Se om [[L'ježan agj]]an administrativine keskuz.
 
 Voz'sadoiš lidn oli azegišton konstruktoroiden päsijaks. Järedad jogiport i lendimport ratas L'ježas jüguiden täht päpaloin.
 
-Vl 2015 lidnan eläjiden lugu oli 197 013 ristitud.
+Lidn sijadase Urt-jogen lanktendan [[Maas]]ha randoil.
+
+Vl 2015 lidnan eläjiden lugu oli 197 013 ristitud. Läz 600 tuhad ristituid elädas lidnaglomeracijas.
 
 == Galerei ==
 <gallery mode="packed" heights="125px">
@@ -27,7 +29,7 @@ Ulg.jpg|L'ježan universitet
 </gallery>
 
 == Irdkosketused ==
-* [http://liege.be/ Lidnan oficialine sait (''liege.be'').] {{ref-fr}}
+* [http://liege.be/ Lidnan oficialine sait (''liege.be'').] {{ref-fr}} {{ref-nl}} {{ref-de}} {{ref-en}}
 {{Commons|Liège}}
 
 {{stub}}
