--- a/Titanik_(fil'm,_1997).mw
+++ b/Titanik_(fil'm,_1997).mw
@@ -27,7 +27,7 @@
  | imdb_id      = 0120338
  | kp_id        = 
 }}
-'''«Titanik»''' ({{lang-en|Titanic}}) om [[Kemeron Džeims|Džeims Kemeron]]-režissöran vn [[1997]] [[AÜV|amerikaine]] fil'm-katastrof i romantine dram.
+'''«Titanik»''' ({{lang-en|Titanic}} [taɪˈtænɪk]) om [[Kemeron Džeims|Džeims Kemeron]]-režissöran vn [[1997]] [[AÜV|amerikaine]] fil'm-katastrof i romantine dram.
 
 == Rolid ==
 * ''Džek Douson'' — [[Leonardo Di Kaprio]]
