+ galerei, +hom, aktualizacii

--- a/Gur'jevsk_(Kemerovon_agj).mw
+++ b/Gur'jevsk_(Kemerovon_agj).mw
@@ -1,26 +1,26 @@
 {{Eländpunkt
  | Nimi = Gur'jevsk<br />Гурьевск
- | Lidnanznam = Gurevsk coat of arms.png
+ | Lidnanznam = Guryevsk COA (2006).gif
  | Flag = Flag of Gurievsk (Kemerovo oblast).png
  | Lidnanznam text = Gur'jevskan lidnanznam (Kemerovon agj)
  | Flag text = Gur'jevskan flag (Kemerovon agj)
  | Valdkund = Venäma
- | Eläjiden lugu = 23,089
- | Voz' = 2017
+ | Eläjiden lugu = 22,134
+ | Voz' = 2021
  | Pind = 50.1
- | Fail = Guryevsk, Kemerovo Oblast, Russia.jpg
- | Pämez' = Mihail Podanev<br />(sügüz'ku 2015—)
+ | Fail = Guryevsk, Kemerovo Oblast, Russia..jpg
+ | Pämez' = Sergei Žuravlöv<br />(sulaku 2020—)
  | Telefonkod = +7-38463-xx-xxx
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
 {{Znamoičendad|Gur'jevsk}}
-'''Gur'jevsk''' ({{lang-ru|Гурьевск}}) om [[Venäma]]n lidn da lidnankund [[Kemerovon agj]]an päivlaskmas. Se om [[Gur'jevskan rajon (Kemerovon agj)|Gur'jevskan rajonan]] administrativine keskuz (1935−1963 i vspäi 1987) da kaikiš suremb lidn, toine om [[Salair]].
+'''Gur'jevsk''' ({{lang-ru|Гу́рьевск}}) om [[Venäma]]n lidn da lidnankund [[Kemerovon agj]]an päivlaskmas. Se om [[Gur'jevskan rajon (Kemerovon agj)|Gur'jevskan rajonan]] administrativine keskuz (1935−1963 i vspäi 1987) da kaikiš suremb lidn, toine om [[Salair]].
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1816 kuti hobedansuladuztegim da žilo senno, nimitihe ph. Gurijan vai finansiden Dmitrii Gurjev-ministran (1810−1823) kanzannimen mödhe. Vspäi 1826 pästtihe kaugedraudad tegimel. Kätihe radnikžilod lidnaks vl 1938.
 
-Lidn šingotase metallurgižel tegimel (läz 2 tuhad radnikoid), mugažo pen' kivivoinümbriradai tegim, sömänkombinat i inertižen pölün fabrik ratas.
+Gur'jevsk-lidn šingotase raudan metallurgijan tegimel<ref>[http://gmzkem.net/ Gur'jevskan metallurgižen tegimen sait (''gmzkem.net'').] {{ref-ru}}</ref> (terased, vanundtegesed, läz 2 tuhad radnikoid), mugažo pen' kivivoinümbriradai tegim, sömänkombinat i inertižen pölün fabrik ratas.
 
 == Geografijan andmused ==
 Lidn sijadase Bačat-jogen randal ([[Ob' (jogi)|Obin]] oigedpol'ne bassein), Salairan ülüdenno, 230 m ü.m.t. keskmäižel korktusel. Matkad [[Kemerovo]]n röunhasai om 150 km pohjoižhe. Lähembaižed lidnad oma [[Salair]] 2 km suvipäivlaskmha i [[Belovo]] 30 km pohjoižpäivnouzmha orhal, avtol vai raudtel.
@@ -31,6 +31,20 @@ Gur'jevsk om lidnankundan üks'jäine eländpunkt.
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 24 817 ristitud, rajonan pol'. Kaikiš suremb ristitišt oli 31 tuhad eläjid vl 1967.
 
 Belovon äiprofil'žen tehnikuman filial om professionaližen opendusen aluzkundaks.
+
+Edeline lidnan pämez' om Mihail Podanev (sügüz'ku 2015 — sulaku 2020).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Лавка купца Ермолаева 2.jpg|Gur'jevskan kodirandantedištandmuzei (2016, ende Jermolajev-torgovanan lauk)
+Guryevsk, Kemerovo Oblast, Russia.jpg|Söndtavaroiden lauk eländpertiš vl 2008
+Школа в Гурьевске.jpg|Škol (2008)
+Городской клуб горняков.jpg|Kaivajiden lidnklub (2008)
+Памятники в ПАТП - panoramio.jpg|Avtobusad-muštnikad lidnan passažiravtotransportižes edheotandas vl 2009
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.admgurievsk.ru/ Lidnankundan tobmuden aluzkundoiden oficialine sait (''admgurievsk.ru'').] {{ref-ru}}
