+ galerei, + hom, aktualizacii

--- a/Belovo.mw
+++ b/Belovo.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Belovon lidnanznam
  | Flag text = Belovon flag
  | Valdkund = Venäma
- | Eläjiden lugu = 72,843
- | Voz' = 2017
+ | Eläjiden lugu = 70,611
+ | Voz' = 2021
  | Pind =
  | Fail = Monument to defenders of the fatherland 5264.jpg
  | Pämez' = Aleksei Kurnosov<br />(uhoku 2014—)
@@ -14,20 +14,33 @@
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-'''Belovo''' ({{lang-ru|Белово}}) om [[Venäma]]n lidn [[Kemerovon agj]]an keskuzpalan päivlaskmas. Se om agjan kahesanz' lidn eläjiden lugun mödhe, [[Belovon lidnümbrik]]on administrativine keskuz.
+'''Belovo''' ({{lang-ru|Бело́во}}) om [[Venäma]]n lidn [[Kemerovon agj]]an keskuzpalan päivlaskmas. Se om agjan kahesanz' lidn eläjiden lugun mödhe, [[Belovon lidnümbrik]]on administrativine keskuz.
 
 == Istorii ==
 Eländpunktan aluz om pandud pagenuden Fedor Belov-manmehen parččomaks vl 1726, nimitihe hänen kanzannimen mödhe. Löuzihe [[kivihil']]t, zavottihe sen samišt vl 1851 läz küläd, se oli ezmäine [[Kuzneckan hil'bassein|Kuzbassan]] kaivuz. Vl 1921 saudihe raudted külänno, i se šingotaškanzi. Vn 1938 4. päiväl tal'vkud Belovo-radnikžilo sai lidnan statusad.
 
-Lidn om agjan hilen samižen nellänz' surtte keskuz (koume kaivut i kaks' kar'jerad), mugažo sadas šebinäd. Raudbetonan tegim radab.
+Belovo om agjan hilen samižen nellänz' surtte keskuz (koume kaivut i kaks' kar'jerad), mugažo sadas šebinäd. Raudbetonan tegim radab.
 
 == Geografijan andmused ==
 Lidn sijadase [[Kuzneckan katl'uz|Kuzneckan katl'uses]], Bačat-jogen hural randal tobjimalaz ([[Ob' (jogi)|Ob'-jogen]] oigedpol'ne bassein), 220 m ü.m.t. keskmäižel korktusel. Matkad [[Kemerovo]]hosai om 105 kilometrad pohjoižhe orhal, 122 km avtotedme vai raudtedme. Lähembaižed lidnad oma [[Gur'jevsk (Kemerovon agj)|Gur'jevsk]] 30 km suvipäivlaskmha, [[Leninsk Kuzneckii]] 35 km pohjoižhe i [[Polisajevo]] 25 km pohjoižhe.
 
+Kuz' eländpunktad mülüdas lidnümbrikho, sidä kesken nell' järedad lidnanvuittušt žilod. Lidnümbrikon pind om 219,34 km².
+
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 76 764 ristitud, lidnümbrikon koume videndest. Kaikiš suremb lidnan ristitišt oli 118 tuhad eläjid vozil 1962 i 1987.
 
-Professionaližen opendusen aluzkundad: Belovon pedagogine i politehnine kolledžad, Kemerovon agjan medicinižen kolledžan filial, Belovon äiprofil'ne tehnikum, üläopendusen aluzkundoiden nell' filialad (Kemerovo, Novosibirsk, Tomsk).
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] seičeme jumalanpertid<ref>[http://sobory.ru/geo/locat/62 Belovon pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> i časoun' oma olmas lidnas.
+
+Professionaližen opendusen aluzkundad: Belovon pedagogine i politehnine kolledžad, Kemerovon agjan medicinižen kolledžan filial, Kuzbassan äiprofil'ne tehnikum<ref>[http://www.pu5belovo.ru/ Kuzbassan äiprofil'žen tehnikuman sait (''pu5belovo.ru'').] {{ref-ru}}</ref> (ende Belovon raudtetransportan tehnikum), üläopendusen aluzkundoiden nell' filialad (Kemerovo, Novosibirsk, Tomsk).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+City Hall Belovo 5254.jpg|Lidnümbrikon Administracijan sauvuz (2011)
+Chapel in Belovo 5350.jpg|Jumalanmaman Katken časoun', vn 2011 nägu
+Sports House in Belovo 664.jpg|Sportan pert' (2012)
+Central Palace of Culture in Belovo 5242.jpg|Kul'turkeskuz (2011)
+Станция Белово.jpg|Belovo-raudtestancii vl 2007
+</gallery>
 
 == Homaičendad ==
 <references />
