--- a/Lidn.mw
+++ b/Lidn.mw
@@ -8,10 +8,16 @@ Nügüd'aigaižed lidnad jagasoiš penihe (vähemb 50 tuhad eläjid), keskmäiž
 
 [[Lidnansauvomine]] tedoidab lidnoiden šingotesen käskusid da ohjandimid.
 
-== Lidnha sidodud vepsän muštatišed ==
+== Lidnha sidodud vepsän muštatišed da ozoitesed ==
+=== Muštatišed ===
 <blockquote>
 * ''Ei kaht carid ühthe lidnha mülütagoi.''
 * ''Ni küläs kündai, ni lidnas lendai.'' (nimihe ei sättu ristitun polhe)
+</blockquote>
+
+=== Ozoitez ===
+<blockquote>
+* Hebo hirnui lidnas, a tägä vall'astuz särahti (jumalanjuru).
 </blockquote>
 
 == Homaičendad ==
