*Empty MediaWiki Message*

--- a/Lidn.mw
+++ b/Lidn.mw
@@ -17,7 +17,7 @@ Nügüd'aigaižed lidnad jagasoiš penihe (vähemb 50 tuhad eläjid), keskmäiž
 
 === Ozoitez ===
 <blockquote>
-* Hebo hirnui lidnas, a tägä vall'astuz särahti (jumalanjuru).
+* Hebo hirnui lidnas, a tägä vall'astuz särahti. (jumalanjuru)
 </blockquote>
 
 == Homaičendad ==
