--- a/Lahn.mw
+++ b/Lahn.mw
@@ -26,6 +26,11 @@ Pä om pen', hibj om järed. Su lopiše penel peitol'žel torvudel. Elädas 23-v
 
 Nored lahnad — '''lahnalituižed''', ned oma hobedakahad mujul.
 
+== Lahnha sidodud vepsän ozoitez ==
+<blockquote>
+* Penes järvudes lahnad vätas. (kürzad rehtläl)
+</blockquote>
+
 == Homaičendad ==
 <references />
 
