/* Vändho sidodud vepsän muštatišed */ + ozoitez

--- a/Vänd.mw
+++ b/Vänd.mw
@@ -8,10 +8,15 @@ Vändon tundused da tärtused: materialižiden satusiden olmatomuz, südäiolend
 * forman mödhe: [[laudvändod]], [[azartvändod]], likundvändod, sportvändod, rol'vändod, lapsiden vändod, [[kompjuterižed vändod]].
 * südäiolendan mödhe: tedonandajad vändod, muzikvänd, azjaližed vändod, sportvändod, sodavändod.
 
-== Vändho sidodud vepsän muštatišed ==
+== Vändho sidodud vepsän muštatišed da ozoitesed ==
+=== Muštatišed ===
 <blockquote>
 * ''Eile vändod — eile bobašt.''
 * ''Ezmäi rad, eskai vänd.''
+</blockquote>
+=== Ozoitez ===
+<blockquote>
+* Penes järvudes lahnad vätas. (kürzad rehtläl)
 </blockquote>
 
 == Homaičendad ==
