/* Kuldha sidodud vepsän muštatišed da ozoitesed */ +

--- a/Kuld.mw
+++ b/Kuld.mw
@@ -24,6 +24,7 @@ Kuld om lujas tetab juvelirine metall. Ottas kävutamižhe sidä mugažo elektro
 <blockquote>
 * ''Ei i car' kuldad sö.''
 * ''Ei kaik ole kuld, mi kuštab, ei kaik ole hobed, mi hoštab.''
+* ''Kal'hemb kuldad om puhtaz südäin.''
 * ''Tervhuz om kal'hemb kuldad.''
 </blockquote>
 
