--- a/Südäikera.mw
+++ b/Südäikera.mw
@@ -4,6 +4,11 @@
 
 [[Ristitun]] südäikera kogoneb nelläs havadospäi, ned oma jagatud seinil i klapanoil. Veren 7..10 tuhad litroid läbitadas ristitun südäikerad ühtes päiveses, 3,15 mln litroid vodes.
 
+== Südäikerha sidodud vepsän muštatiž ==
+<blockquote>
+* ''Kal'hemb kuldad om puhtaz südäin.''
+</blockquote>
+
 {{Commons|Heart}}
 
 {{stub}}
