--- a/Südäikera.mw
+++ b/Südäikera.mw
@@ -4,9 +4,10 @@
 
 [[Ristitun]] südäikera kogoneb nelläs havadospäi, ned oma jagatud seinil i klapanoil. Veren 7..10 tuhad litroid läbitadas ristitun südäikerad ühtes päiveses, 3,15 mln litroid vodes.
 
-== Südäikerha sidodud vepsän muštatiž ==
+== Südäikerha sidodud vepsän muštatišed ==
 <blockquote>
 * ''Kal'hemb kuldad om puhtaz südäin.''
+* ''Verhad käded hüväd, a ei olgoi südäimen mödhe.''
 </blockquote>
 
 {{Commons|Heart}}
