--- a/Käzi.mw
+++ b/Käzi.mw
@@ -38,6 +38,7 @@ Sikš ku käzivarz' enamb toižid elimid tegeb ristitun elonradmižen aigan, ka 
 * ''Mehel om mela kädes, venehen jumal veb.''
 * ''Ota kädehe dai tedištad.''
 * ''Sil'mad varaitas, käded ratas.''
+* ''Verhad käded hüväd, a ei olgoi südäimen mödhe.''
 * ''Ühtel kädel droči, toižel lö.''
 </blockquote>
 
