/* Kädehe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Käzi.mw
+++ b/Käzi.mw
@@ -35,6 +35,7 @@ Sikš ku käzivarz' enamb toižid elimid tegeb ristitun elonradmižen aigan, ka 
 * ''Kelel kut taht, käzil ala koske.''
 * ''Kus kibed, sid' i käded, kus armaz, sid' i sil'mad.''
 * ''Käzi käden pezeb, blöd blödan katab.''
+* ''Käzi pit'k, ulotub kaiktäna.''
 * ''Mehel om mela kädes, venehen jumal veb.''
 * ''Ota kädehe dai tedištad.''
 * ''Sil'mad varaitas, käded ratas.''
