/* Kädehe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Käzi.mw
+++ b/Käzi.mw
@@ -38,6 +38,7 @@ Sikš ku käzivarz' enamb toižid elimid tegeb ristitun elonradmižen aigan, ka 
 * ''Käzi pit'k, ulotub kaiktäna.''
 * ''Mehel om mela kädes, venehen jumal veb.''
 * ''Ota kädehe dai tedištad.''
+* ''Otajan käzi ei surdu, a andajan surdub.''
 * ''Sil'mad varaitas, käded ratas.''
 * ''Verhad käded hüväd, a ei olgoi südäimen mödhe.''
 * ''Ühtel kädel droči, toižel lö.''
