/* Armastushe sidodud vepsän muštatišed */ +

--- a/Armastuz.mw
+++ b/Armastuz.mw
@@ -12,6 +12,7 @@ Amuižed grekalaižed erištiba armastusen toižendoid: kanzas («storge»), seb
 == Armastushe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Armaz kuti hahk lambaz verhas läväs.''
+* ''Armhemb ičtaiž ei ole nikeda.''
 * ''Hambhan kibu da mel'heižen kibu oma ühtejiččed.''
 * ''Ičeiž mad armhembad, ičeiž mecad čomembad.''
 * ''Solatomad särpta da ei mel'hišt čukoida.''
