/* Kaks'-lugusanha sidodud vepsän muštatišed da ozoitesed */ +

--- a/2_(lugu).mw
+++ b/2_(lugu).mw
@@ -12,6 +12,7 @@
 * ''Kaht jänišad küksendeled, ni üht ed tabada.''
 * ''Kaks' kondjad ühtes pezas ei voigoi eläda.''
 * ''Lapses om äi ližad: kalan sab da kaks' söb.''
+* ''Ühtele om hüvä, a kahtele — paremb.''
 * ''Ühtespäi kaht ei linne.'' (ala anda vaudad lapsele)
 </blockquote>
 
