--- a/1_(lugu).mw
+++ b/1_(lugu).mw
@@ -20,6 +20,7 @@ Miččen taht lugun äikerdoičend ühteks andab sidä-žo lugud, jagamine ühte
 * ''Pu ei lankte ühtel painandal.''
 * ''Üht päd ei voi sötta.''
 * ''Ühtel sijal i kivi kazvahtub.''
+* ''Ühtele om hüvä, a kahtele — paremb.''
 * ''Ühtes päiväižes hatrad kuivaziba.'' (edahaižen pol'ven heimolaižiš)
 * ''Ühtespäi kaht ei linne.'' (ala anda vaudad lapsele)
 * ''Ühthe korvha mäneb, toižespäi lähteb.''
