/* Meheze sidodud vepsän muštatišed */ +

--- a/Mez'.mw
+++ b/Mez'.mw
@@ -22,6 +22,8 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Kala ecib süvemban, a mez' paremban.''
 * ''Küläd eile koiratomad, mad eile mehetomad.''
 * ''Mehel om mela kädes, venehen jumal veb.''
+* ''Mez' ei voi olda sobita.''
+* ''Mez' ei voi olda sömäta.''
 * ''Mez' ei völ koliške, a kutjal söttas.''
 * ''Mez' nimel ei elä, a radol.''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
