/* Sömhä sidodud vepsän muštatišed da ozoitesed */ +

--- a/Söm.mw
+++ b/Söm.mw
@@ -30,6 +30,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Leib da vezi — saldatan söm.''
 * ''Luzikaine, ole hüvä, mäne sömha!''
 * ''Mahtad munid söda, ka mahta i kanoid sötta.''
+* ''Mez' ei voi olda sömäta.''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
 * ''Midä ei sögoi, sidä i laudale ei togoi.''
 * ''Mitte samine, mugoi i sömine.''
