/* Sobihe sidodud vepsän muštatišed */ +

--- a/Sobad.mw
+++ b/Sobad.mw
@@ -89,6 +89,7 @@ Uniform om märitud büdžetorganizacijoiden radnikoiden da valdkundmehiden täh
 
 == Sobihe sidodud vepsän muštatišed ==
 <blockquote>
+* ''Mez' ei voi olda sobita.''
 * ''Pen' Makaraine kaikid sobitab (negl).''
 * ''Sömäta joksed läbi pöudos, a alasti ei sa.''
 </blockquote>
