/* Meheze sidodud vepsän muštatišed */ +

--- a/Mez'.mw
+++ b/Mez'.mw
@@ -18,6 +18,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
 * ''Ei kaik mehed olgoi, kudambad kadjoid kandištas.''
 * ''Ei nimi mest pahenda, a mez' nimen.''
+* ''Ei olnu se mez' bedas, ken toižele ei abuta.''
 * ''Ei severz' mehid, kuverz' kadjoid.''
 * ''Kala ecib süvemban, a mez' paremban.''
 * ''Küläd eile koiratomad, mad eile mehetomad.''
