--- a/Rand_(Vepsän_rahvahaline_küläkund).mw
+++ b/Rand_(Vepsän_rahvahaline_küläkund).mw
@@ -12,13 +12,15 @@
 {{Znamoičendad|Rand (külä)}}
 '''Rand''' ({{lang-ru|Берег}}) om pen' [[Vepsänma|vepsän]] külä [[Vologdan agj]]an [[Babajevon rajon]]as. Külä om [[Vepsän rahvahaline küläkund|Vepsän rahvahaližen küläkundan]] palaks.
 
+== Istorii ==
 Ezmäine kirjutamine Randan (siloi — Suren Randan, {{lang-ru|Большой Берег}}) polhe om datiruidud vl [[1626]]. Pen' Rand-ki (''Малый Берег'') oli olmas läz necidä eländpunktad, i nened küläd oma ühtenzoittud edelespäi.
 
+Vn 2019 sügüz'kulpäi külän tobmin om Nadežda Pavlovna Mednikova.<ref>Решение № 106 от 19.09.2019 г. «Об утверждении кандидатур старост населенных пунктов сельского поселения Вепсское национальное» (Pätand № 106 19.09.2019-dataspäi «Eländpunktoiden tobmiden kandidaturiden vahvištoituses», Vepsän rahvahaline küläkund).</ref>
+
+== Geografijan andmused ==
 Rand-külä sijadase rajonan pohjoižpäivnouzmas, [[Ivod]]-jogen oiktal randal. Matkad küläkundan [[Timošino (Babajevon rajon)|Timošino]]-keskuhesai om 42 km suvhe avtotedme, [[Babajevo]]-rajonkeskushesai om 132 km suvhe avtotedme.
 
 Vn 2002 kaiken [[Venäma]]n rahvahanlugemižen mödhe külän eläjiden lugu oli 6 ristitud, i kaik oliba [[vepsläižed]].
-
-Vn 2019 sügüz'kulpäi külän tobmin om Nadežda Pavlovna Mednikova.<ref>Решение № 106 от 19.09.2019 г. «Об утверждении кандидатур старост населенных пунктов сельского поселения Вепсское национальное» (Pätand № 106 19.09.2019-dataspäi «Eländpunktoiden tobmiden kandidaturiden vahvištoituses», Vepsän rahvahaline küläkund).</ref>
 
 == Homaičendad ==
 <references />
