--- a/Kanfetad.mw
+++ b/Kanfetad.mw
@@ -4,7 +4,14 @@
 
 Kogotas 60..75 % saharad. Oleldas glazurottud, glazurita i šokoladsüdäimenke. Söndtavar mülütab 3800..6000 kkal/kg.
 
-Erased toižendad: [[karamel']], [[iris (kanfetad)|iris]], [[trüfel' (kanfet)|trüfelid]], äišoidukahad, [[jähine|jähižen]] alusel.
+== Toižendad ==
+Erased toižendad: [[karamel']], [[iris (kanfetad)|iris]], [[trüfel' (kanfet)|trüfelid]], äišoidukahad, [[jähine|jähižen]] alusel, diabetižed (dietižed).
+
+''Kanfetmass'' oleleb: pomadine, fruktine, marcipanine, pähkmidenke (praline), maidokaz, pekstud, likörine, krem, karamelin alusel, gril'jäžine, cukatad, kuivatud fruktad, spirtuidud fruktad, marjad.
+
+''Kanfetkorpusan'' toižendad: üks'jäižed, kaksitadud, kombiniruidud, äišoidukahad, karamelin alusel, vahlidenke.
+
+''Glazurin'' toižendad: šokoladine, pomadine, saharakaz, razvanke, maidokaz šokoladine, šokoladine mindaline, fruktžele, karamelin massaspäi.
 
 == Homaičendad ==
 <references />
