--- a/Venäman_hogahtuz_Ukrainha_(2022).mw
+++ b/Venäman_hogahtuz_Ukrainha_(2022).mw
@@ -1,15 +1,15 @@
 [[Fail:2022 Russian invasion of Ukraine.svg|thumbnail|right|450px|Venäman armijan sodategendoiden Ukrainan territorijas aktualine kart.
 ----
 <font color="red">rusked</font> — territorii Venäman armijan i «LDNR»:an separatistoiden kontrolin al;<br><font color="darkgoldenrod">pakuine</font> — Ukrainan territorii (pro-)venämalaižen kontrolita;<br>''tomarad'' — (pro-)venämalaižen sodavägiden edenendoiden čuraduz;<br>💥 — iškendad Ukrainan eländpunktoihe]]
-'''Venäman hogahtuz Ukrainha''', vai '''Venämalaiž-ukrainalaine {{abbr|soda|(voin)|0}}''', vai ''Venäman soda Ukrainan vaste'', ''Venäman agressii Ukrainan vaste'' (oficialine nimi: '''Specialine sodaoperacii''', {{lang-ru|Специальная военная операция}}; voimusine ''specoperacijan'' peitnimi — ''«Mangustan heituz»'', {{lang-ru|„Бросок мангуста“}}) om nügüdläine järed hogahtuz (sodaintervencii) [[Ukrain]]ha [[Venäma]]n laptaspäi, kudamb zavodihe voden [[2022]] [[24. uhoku|uhokun 24. päiväl]] aigoiš homendesel. Necen edes Venäma kogozi ičeze kontraktarmijan vägid plananmärižes lähen Ukrainan röunmad, a mugažo Venäman [[Putin Vladimir|Putin]]-prezident tundišti oficialižes [[Doneckan Rahvahaline Tazovaldkund|DNR:an]] da [[Luganskan Rahvahaline Tazovaldkund|LNR:an]] ripmatomut 21. päiväl uhokud. Aigemba il'mestuiba äiluguižed znamad, miše hogahtuz oleskelda voib; Putin da tobmuz ei tundištanugoi niid todesižikš. 
+'''Venäman hogahtuz Ukrainha''', vai '''Venämalaiž-ukrainalaine {{abbr|soda|(voin)|0}}''', vai ''Venäman soda Ukrainan vaste'', ''Venäman agressii Ukrainan vaste'' (oficialine nimi: '''Specialine sodaoperacii''', {{lang-ru|Специальная военная операция}}; voimusine ''specoperacijan'' peitnimi — ''«Mangustan heituz»'', {{lang-ru|„Бросок мангуста“}}) om järed hogahtuz (sodaintervencii) [[Ukrain]]ha [[Venäma]]n laptaspäi, kudamb zavodihe voden [[2022]] [[24. uhoku|uhokun 24. päiväl]] aigoiš homendesel. Necen edes Venäma kogozi ičeze kontraktarmijan vägid plananmärižes lähen Ukrainan röunmad, a mugažo Venäman [[Putin Vladimir|Putin]]-prezident tundišti oficialižes [[Doneckan Rahvahaline Tazovaldkund|DNR:an]] da [[Luganskan Rahvahaline Tazovaldkund|LNR:an]] ripmatomut 21. päiväl uhokud. Aigemba il'mestuiba äiluguižed znamad, miše hogahtuz oleskelda voib; Putin da tobmuz ei tundištanugoi niid todesižikš. 
 
-Päiškendad hogahtiba Ukrainan päivnouzmha, pohjoižhe ([[Vaugedvenäma]]n territorijaspäi [[Lukašenko Aleksandr|Aleksandr Lukašenko]]-prezidentan peitpaginan polhe) dai ehtbokha. Putin sanui, miše sodaintervencijan metod oma {{abbr|aniku|якобы|0}} Ukrainan [[demilitarizacii]] i «denacifikacii» vaiše.
+Päiškendad hogahtiba Ukrainan päivnouzmha, pohjoižhe ([[Vaugedvenäma]]n territorijaspäi [[Lukašenko Aleksandr|Aleksandr Lukašenko]]-prezidentan peitpaginan polhe) dai ehtbokha. Putin sanui, miše sodaintervencijan metod oliba {{abbr|aniku|якобы|0}} Ukrainan [[demilitarizacii]] i «denacifikacii» vaiše.
 
 Ukrainan [[Zelenskii Volodimir|Vladimir Zelenskii]]-prezident tegi tedotust, miše Venäman sodategendoiden pämet om Ukrainan likvidiruind valdkundaks. Vägitungendan päiväl Ukrain rebiti diplomatižid kosketusid Venämanke, Zelenskii-prezident pani sodaolendad Ukrainan territorijal. Üleine mobilizacii om tedotadud Ukrainas 25. uhokud.
 
-Venäman hogahtuz Ukrainan territorijaha sai agjahišt hondustust äjiš valdkundoiš, potencialižiden hätkeližstrokuižiden jäl'gusidenke Venäman ekonomikale da kundale. Edes keväz'kun 1. päiväd äi Venäman eläjid ei olgoi lugenuded sodaoperacijan hüväks da oma lähtnuded irdale sanumha «em tahtoigoi sodan Ukrainan vaste», ika tobmuz om azotanu sidä. 
+Voden 2022 keväz'kul oli olnu kožundpaginoid toradajiden poliden keskes, no hogahtuz jätktase völ.  
 
-Edes keväz'kun 1. päiväd om olnu kožundpaginoid toradajiden poliden keskes, no hogahtuz jätktase völ.  
+Hogahtuz Ukrainan territorijaha sai agjahišt hondustust äjiš valdkundoiš, hätkeližstrokuižiden jäl'gusidenke Venäman ekonomikale da kundale. Läz 70% venänikoid gölü pid'oiteliba<!-- verekast--> «specoperacijad». Ei kaik eläjad meiš valdkundas oliba lugenuded hogahtusen hüväks, i oliba lähtnuded irdale sanumha «em tahtoigoi sodan Ukrainan vaste», no tobmuz oli azotanu sidä kovas. Sodacenzur Ukrainas i eriližes Venämas oli zavodihe.
 
 {{stub}}
 [[Kategorii:Sodad]]
