--- a/Kanfetad.mw
+++ b/Kanfetad.mw
@@ -4,6 +4,10 @@
 
 Kogotas 60..75 % saharad. Oleldas glazurottud, glazurita i šokoladsüdäimenke. Söndtavar mülütab 3800..6000 kkal/kg.
 
+Kanfetan form voib olda erazvuitte lujas. Tehtas konditerižes edheotandas. Mödas ühthižes pakuiteses, kores vai niita.
+
+Produktan üläkulutand ei ole mäne tervhudeks saharan korktan olendan tagut, se imese verehe teravas i kucub problemoid ristituil [[sahardiabet|diabetata]] eskai. Sen ližaks, magutesiden sönd kucub hambhiden [[karies]]ad, i tariž puhtastada hambhid kanfetoiden jäl'ghe kerdalaz.
+
 == Toižendad ==
 Erased toižendad: [[karamel']], [[iris (kanfetad)|iris]], [[trüfel' (kanfet)|trüfelid]], äišoidukahad, [[jähine|jähižen]] alusel, diabetižed (dietižed).
 
