--- a/.tg.mw
+++ b/.tg.mw
@@ -1,5 +1,7 @@
 '''.tg''' om [[Togo]]n [[DNS|Internet-domen]]. Se om avaitud [[1996. voz'|1996]]-nden voden 5. päiväl sügüz'kud<ref>[http://iana.org/domains/root/db/tg.html IANA — .tg Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>, no ei faktižešti olend kävutamas vhesai 2015.
 
+Registracii om lasktud kahtendel i koumandel tazopindoil. Domenan kävutand verazmalaižil om harv kacmata röunadusiden olmatomudhe heiden täht.
+
 == Homaičendad ==
 <references/>
 
