*Empty MediaWiki Message*

--- a/.tg.mw
+++ b/.tg.mw
@@ -8,6 +8,7 @@ Registracii om lasktud kahtendel i koumandel tazopindoil. Domenan kävutand vera
 == Irdkosketused ==
 * [http://www.nic.tg/ Domenan sait (''nic.tg'')] {{ref-fr}}, ohjandai om Togon ''«Autorite de Reglementation des secteurs de Postes et de Telecommunications» (ART&P)''
 * [http://iana.org/domains/root/db/tg.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.tg}}
 
 {{CcTLD}}
 
